--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,14 +11,17 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "^15.3.0",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
