--- a/packages/db/.env.example
+++ b/packages/db/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5433"
+DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5433/postgres"
