--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^17.2.0",
     "esbuild": "^0.25.6",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
