--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.1.11",
     "axios": "^1.10.0",
@@ -30,6 +31,7 @@
     "react-konva": "^19.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "use-image": "^1.1.4",
     "uuid": "^11.1.0",
     "zustand": "^5.0.6"
   },
