added rich text editor

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,10 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tiptap/extension-strike": "^3.0.7",
+    "@tiptap/extension-underline": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
