--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,11 +14,14 @@
     "@repo/db": "*",
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/ws": "^8.18.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "esbuild": "^0.25.6",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "ws": "^8.18.3",
     "zod": "^4.0.5"
   },
   "devDependencies": {
