--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ws": "^8.18.1",
+    "bull": "^4.16.5",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "esbuild": "^0.25.6",
