launch and publish quiz handler

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "nodenext",
     "forceConsistentCasingInFileNames": true,
     "allowImportingTsExtensions": true,
-    "noEmit": true
+    "noEmit": true,
   },
   "include": [
     "src"
