--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,6 +29,7 @@
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.5",
     "ws": "^8.18.3",
     "zod": "^4.0.5"
   },
