--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
         "motion": "^12.23.6",
         "next": "^15.3.0",
         "next-auth": "^4.24.11",
+        "next-themes": "^0.4.6",
         "postcss": "^8.5.6",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
