--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,10 +24,12 @@
         "@tiptap/extension-underline": "^3.0.7",
         "@tiptap/react": "^3.0.7",
         "@tiptap/starter-kit": "^3.0.7",
+        "@types/gsap": "^3.0.0",
         "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "framer-motion": "^12.23.12",
         "gsap": "^3.13.0",
         "konva": "^9.3.22",
         "lucide-react": "^0.525.0",
