--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,12 +28,13 @@
         "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cobe": "^0.6.4",
         "date-fns": "^4.1.0",
         "framer-motion": "^12.23.12",
         "gsap": "^3.13.0",
         "konva": "^9.3.22",
         "lucide-react": "^0.525.0",
-        "motion": "^12.23.6",
+        "motion": "^12.23.12",
         "next": "^15.3.0",
         "next-auth": "^4.24.11",
         "next-themes": "^0.4.6",
