--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -21,5 +21,5 @@
         "postcss.config.mjs",
         "eslint.config.ts"
     ],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", ".next"]
 }
