--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,9 +44,11 @@
         "react-dom": "^19.1.0",
         "react-icons": "^5.5.0",
         "react-konva": "^19.0.7",
+        "rough-notation": "^0.5.1",
         "sonner": "^2.0.6",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
+        "three": "^0.179.1",
         "use-image": "^1.1.4",
         "uuid": "^11.1.0",
         "zustand": "^5.0.6"
