created wallet panel to support wallet connection.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,13 @@
         "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tooltip": "^1.2.7",
         "@repo/ui": "*",
+        "@solana/wallet-adapter-backpack": "^0.1.14",
+        "@solana/wallet-adapter-base": "^0.9.27",
+        "@solana/wallet-adapter-phantom": "^0.9.28",
+        "@solana/wallet-adapter-react": "^0.15.39",
+        "@solana/wallet-adapter-solflare": "^0.6.32",
+        "@solana/wallet-adapter-wallets": "^0.19.37",
+        "@solana/web3.js": "^1.98.4",
         "@tailwindcss/postcss": "^4.1.11",
         "@tiptap/extension-strike": "^3.0.7",
         "@tiptap/extension-underline": "^3.0.7",
