--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
         "postcss": "^8.5.6",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "react-github-calendar": "^4.5.9",
         "react-icons": "^5.5.0",
         "react-konva": "^19.0.7",
         "rough-notation": "^0.5.1",
