--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,13 +26,17 @@
         "@tiptap/react": "^3.0.7",
         "@tiptap/starter-kit": "^3.0.7",
         "@types/gsap": "^3.0.0",
+        "@types/html2canvas": "^1.0.0",
         "axios": "^1.10.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cobe": "^0.6.4",
         "date-fns": "^4.1.0",
+        "dom-to-image-more": "^3.7.1",
         "framer-motion": "^12.23.12",
         "gsap": "^3.13.0",
+        "html-to-image": "^1.11.13",
+        "html2canvas": "^1.4.1",
         "konva": "^9.3.22",
         "lucide-react": "^0.525.0",
         "motion": "^12.23.12",
