--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/index.js",
     "dev": "yarn build && yarn start",
     "lint": "eslint './src/**/*.{ts,js}'",
-    "format": "prettier --write './src/**/*.{ts,tsx,js,jsx,json,md}'"
+    "format": "prettier --write './src/**/*.{ts,tsx,js,jsx,json,md}'",
+    "remove-logs": "npx ts-node src/scripts/remove-logs"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.850.0",
