--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
         "cobe": "^0.6.4",
         "date-fns": "^4.1.0",
         "dom-to-image-more": "^3.7.1",
+        "dotenv": "^17.2.2",
         "framer-motion": "^12.23.12",
         "gsap": "^3.13.0",
         "html-to-image": "^1.11.13",
