--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
         "remove-logs": "npx ts-node scripts/remove-logs.ts"
     },
     "dependencies": {
+        "@lottiefiles/dotlottie-react": "^0.17.1",
         "@next-auth/prisma-adapter": "^1.0.7",
         "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-label": "^2.1.7",
