--- a/apps/orchestrator/package.json
+++ b/apps/orchestrator/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bull": "4.16.5",
     "dotenv": "^17.2.2",
-    "ioredis": "^5.7.0"
+    "ioredis": "^5.7.0",
+    "zod": "^4.1.11"
   }
 }
