--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "yarn prisma studio"
+  },
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "prisma": "^5.19.1"
