participant/spectator full screen warning.

--- a/apps/orchestrator/package.json
+++ b/apps/orchestrator/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "npx esbuild ./src/index.ts --bundle --platform=node --outdir=dist --format=cjs --loader:.ts=ts --sourcemap --external:@prisma/client --external:express --external:jsonwebtoken --external:@aws-sdk/client-s3 --external:@aws-sdk/s3-request-presigner --external:bull --external:ioredis --external:ws ",
     "start": "node dist/index.js",
-    "dev": "yarn build && yarn start"
+    "dev": "yarn build && yarn start",
+    "remove-logs": "npx ts-node src/scripts/remove-logs.ts"
   },
   "keywords": [],
   "author": "",
