--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,10 @@
     "SERVER_NODE_ENV",
     "GITHUB_TOKEN",
     "GOOGLE_CLIENT_SECRET",
-    "NEXTAUTH_URL"
+    "NEXTAUTH_URL",
+    "GITHUB_CLIENT_ID",
+    "GITHUB_CLIENT_SECRET"
+
   ],
   "tasks": {
     "build": {
